--- a/src/server/home/index.njk
+++ b/src/server/home/index.njk
@@ -1,57 +1,45 @@
 {% extends 'layouts/page.njk' %}
+{% from "govuk/components/input/macro.njk" import govukInput %}
+{% from "govuk/components/button/macro.njk" import govukButton %}
 
 {% block content %}
-  {{ appHeading({
-    text: heading,
-    caption: "Core delivery platform Node.js Frontend Template."
-  }) }}
-
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <div class="govuk-body" data-testid="app-page-body">
-        <p>
-          Welcome to the Frontend Template, a starter kit for Core Delivery Platform Node.js Frontends 🚀
-        </p>
-        <p>
-          Based on <a href="https://defra.github.io/software-development-standards">DEFRA</a> and <a
-            href="https://design-system.service.gov.uk/">GOV.UK</a> best practices this starter kit provides you with
-          a deployable, production ready template 🙌🏻 to start your new service with.
-        </p>
-        <p>This template comes with:</p>
-        <ul>
-          <li>
-            <a href="https://frontend.design-system.service.gov.uk/">GOV.UK Frontend</a>
-          </li>
-          <li>
-            <a href="https://hapi.dev">Hapi.js</a>
-          </li>
-          <li>
-            <a href="https://mozilla.github.io/nunjucks/">Nunjucks</a>
-          </li>
-          <li>
-            <a href="https://github.com/mozilla/node-convict">Node Convict</a>
-          </li>
-          <li>
-            <a href="https://jestjs.io/">Jest testing</a>
-          </li>
-          <li>GitHub Actions Pull Request and Publish jobs</li>
-          <li>
-            <a href="https://github.com/pinojs/pino">PinoJs logging</a>
-          </li>
-          <li>
-            <a href="https://standardjs.com">Standard JS</a>
-          </li>
-          <li>
-            <a href="https://eslint.org">ESLint</a>
-          </li>
-          <li>
-            <a href="https://stylelint.io">StyleLint</a>
-          </li>
-          <li>
-            <a href="https://prettier.io">Prettier</a>
-          </li>
-          <li>and lots more... 😎</li>
-        </ul>
+        <form id="response_form" method="post">
+          <div class="govuk-grid-row">
+            <div class="govuk-grid-column-two-thirds">
+              {{ govukInput({
+                id: "search",
+                name: "search",
+                value: search
+              }) }}
+            </div>
+            <div class="govuk-grid-column-one-third">
+              {{ govukButton({
+                text: "Search"
+              }) }}
+            </div>
+          </div>
+        </form>
+        <hr />
+        {% for search in searchResults %}
+          <p>
+            <a href="http://gov.uk{{search.link}}">{{ search.display_type }}: {{ search.title }}</a>
+            <p>
+              {{ search.description }}
+            </p>
+          </p>
+          <div class="govuk-grid-row">
+            <div class="govuk-grid-column-two-thirds">
+              Updated: {{ search.public_timestamp }}
+            </div>
+            <div class="govuk-grid-column-one-third">
+              Score: {{ search.es_score }}
+            </div>
+          </div>
+          <hr />
+        {% endfor %}
       </div>
     </div>
   </div>
