--- a/src/server/content-detail/index.njk
+++ b/src/server/content-detail/index.njk
@@ -8,7 +8,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <div class="govuk-body" data-testid="app-page-body">
-        <p><a href="{{ link }}">{{content.title}}</a></p>
+        <p><a href="{{ url }}" target="_blank">{{content.title}}</a></p>
         <p>{{ content.description }}</p>
         <p><strong>Base path:</strong> {{ content.base_path }}</p>
         <p><strong>Document type</strong> {{ content.document_type }}</p>
